# handler/deleteOpening.go
@@ -8,6 +8,18 @@ import (
 	"github.com/jeffersonborges/gopportunities/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary Delete Opening
+// @Description Delete a new job Opening
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Param id query string true "Opening identification"
+// @Success 200 {object} DeleteOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Router /opening [delete]
 func DeleteOpeningHanlder(ctx *gin.Context) {
 	id := ctx.Query("id")
 	if id == "" {
